Closed Bug 599887 Opened 15 years ago Closed 15 years ago

[Cocoa] keydown event isn't fired during auto repeat

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- beta8+
status1.9.2 --- wontfix
status1.9.1 --- wontfix

People

(Reporter: masayuki, Assigned: masayuki)

References

(Blocks 1 open bug, )

Details

(Keywords: dev-doc-complete)

Attachments

(1 file)

Attached patch Patch v1.0Splinter Review
See http://dev.w3.org/2006/webapi/DOM-Level-3-Events/html/DOM3-Events.html#events-keyboard-event-order keydown events must be dispatched when auto repeating key event dispatches keypress event. This is similar to bug 597981, but this isn't a regression on Mac.
Attachment #478785 - Flags: review?(joshmoz)
Attachment #478785 - Flags: review?(Olli.Pettay)
This isn't a regression, so, we shouldn't fix this bug on branches.
Attachment #478785 - Flags: review?(Olli.Pettay) → review+
Comment on attachment 478785 [details] [diff] [review] Patch v1.0 Steven, could you review this patch?
Attachment #478785 - Flags: review?(smichaud)
Comment on attachment 478785 [details] [diff] [review] Patch v1.0 This looks fine to me, though I haven't tested it. As far as I know it doesn't (currently) make any practical difference -- I don't believe current OS X versions ever send us repeat key events. I tried and failed to track down when the "if (![theEvent isARepeat])" that you removed was added to the code. Do you have any ideas, Josh, why it was there?
Attachment #478785 - Flags: review?(smichaud) → review+
> I tried and failed to track down when the "if (![theEvent isARepeat])" > that you removed was added to the code. Do you have any ideas, Josh, > why it was there? I guess that he used same logic as old mac widget or gtk2 widget. I'll land the patch tomorrow even if josh won't review it.
Whiteboard: [needs review]
(In reply to comment #5) > > I tried and failed to track down when the "if (![theEvent isARepeat])" > > that you removed was added to the code. Do you have any ideas, Josh, > > why it was there? > > I guess that he used same logic as old mac widget or gtk2 widget. This is correct. I was copying that logic.
Attachment #478785 - Flags: review?(joshmoz) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
Duplicate of this bug: 433415
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: