Bug 599887 Dispatch keydown events before keypress event during auto repeat on Cocoa r=smaug+smichaud+josh, a=beta8+